--- a/index.html
+++ b/index.html
@@ -1,29 +1,36 @@
 <!doctype html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <!-- TODO: Set the document title to the name of your application -->
-  <title>Teasers | Made for couples 💖</title>
-  <meta name="description" content="Fresh flowers, chocolates, and curated gift hampers delivered with love." />
-  <meta name="author" content="Teasers" />
-  <link rel="icon" type="image/png" href="/favicon.png" />
+    <title>Teasers | Made for couples 💖</title>
 
-  <!-- TODO: Update og:title to match your application name -->
-  <meta property="og:title" content="Teasers | Made for couples 💖" />
-  <meta property="og:description" content="Fresh flowers, chocolates, and curated gift hampers delivered with love." />
-  <meta property="og:type" content="website" />
-  <meta property="og:image" content="/logo.png" />
+    <meta
+      name="description"
+      content="Fresh flowers, chocolates, and curated gift hampers delivered with love."
+    />
+    <meta name="author" content="Teasers" />
 
-  <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:site" content="@teasers_0" />
-  <meta name="twitter:image" content="/logo.png" />
-</head>
+    <link rel="icon" type="image/png" href="/favicon.png" />
 
-<body>
-  <div id="root"></div>
-  <script type="module" src="src/main.tsx"></script>
-</body>
+    <meta property="og:title" content="Teasers | Made for couples 💖" />
+    <meta
+      property="og:description"
+      content="Fresh flowers, chocolates, and curated gift hampers delivered with love."
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="/logo.png" />
 
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@teasers_0" />
+    <meta name="twitter:image" content="/logo.png" />
+  </head>
+
+  <body>
+    <div id="root"></div>
+
+    <!-- THIS LINE MATTERS -->
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
 </html>
